Bug 451779 - Nothing is shown at all when data source fails to fetch weather data
Summary: Nothing is shown at all when data source fails to fetch weather data
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Weather (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-03-21 21:08 UTC by ratijas
Modified: 2022-11-25 14:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
Weather Report - no background (58.54 KB, image/png)
2022-03-21 21:08 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-03-21 21:08:34 UTC
Created attachment 147656 [details]
Weather Report - no background

SUMMARY

BBC web infrastructure is currently blocked in Russia, which led me to discover that the Weather applet turns completely empty (or if its background is hidden — even fully transparent).

STEPS TO REPRODUCE
1. Relocate to Russia (actually, I don't advice doing that, just cut your internet connection cable and stay safe).
2. Add a «Weather Report» applet to the desktop.
3. Configure it to use some location provided by «BBC Weather».
4. Wait for it to fail to fetch data (takes up to a minute or so).

OBSERVED RESULT
While the applet's data source tries to fetch some data, the applet shows a generic cloud icon and a spinner. After some time it stops trying, and shows amazingly nothing. If applet background is turned off — it's just a transparent void, see the screenshot attached.

EXPECTED RESULT
Applet should show error description alongside some placeholder (in case… I don't know — no error description, just an empty string?)

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.16.15-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Comment 1 Nate Graham 2022-03-27 02:34:32 UTC
Yeah, totally.
Comment 2 Bug Janitor Service 2022-11-24 19:08:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/282
Comment 3 Ismael Asensio 2022-11-25 14:36:29 UTC
Git commit d296d31bda8fd86e3a615bd7244d25a82242b4fa by Ismael Asensio.
Committed on 25/11/2022 at 14:34.
Pushed by iasensio into branch 'master'.

applets/weather: Notify when connection times out

It was left as a TODO. Even the string and translations were already there.

Added an enum to keep a better track of the different states the plasmoid can be in
instead of using individual booleans.
FIXED-IN: 5.27

M  +18   -4    applets/weather/package/contents/ui/FullRepresentation.qml
M  +15   -14   applets/weather/package/contents/ui/main.qml
M  +9    -0    applets/weather/plugin/util.h

https://invent.kde.org/plasma/kdeplasma-addons/commit/d296d31bda8fd86e3a615bd7244d25a82242b4fa