applets/weather: Notify when connection times out

It was left as a TODO. Even the string and translations were already there.

Added an enum to keep a better track of the different states the plasmoid can be in
instead of using individual booleans.

BUG: 451779
FIXED-IN: 5.27